Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextObjUndefined.quorum
class Main
    action Main
        Text v = Test()
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Text
        return undefined
    end
end