Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextInteger.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        integer var = 5
        return var
    end
end